--- a/ISEN_370_Project_1_Assignment.ipynb
+++ b/ISEN_370_Project_1_Assignment.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "ISEN 370 Project 1 Assignment.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNbVNSXt9bS/BmEE8CuBxSA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/StevenXJiang/DataScienceModule1/blob/main/ISEN_370_Project_1_Assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ncat-morrow/isen-project-1-loading/blob/main/ISEN_370_Project_1_Assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -56,25 +55,29 @@
       "source": [
         "import numpy as np\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd"
+      ],
       "metadata": {
         "id": "oB92AdK6FX7M"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import matplotlib.pyplot as plt"
+      ],
       "metadata": {
         "id": "rYFaLHYiFXnr"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -153,7 +156,7 @@
       "source": [
         "## Statistics Calculation\n",
         "\n",
-        "Calculate and print some of the basic statistics for each of the three features of the dataset selected above. \n",
+        "Calculate and print some of the basic statistics for each of the three features of the dataset selected above.\n",
         "Be sure to include mean, minimum, maximum, and standard deviation and be sure to print it in such a way that it is clear what each number represents.\n",
         "hint: use describe() function."
       ]
@@ -221,7 +224,7 @@
       "source": [
         "**Question**\n",
         "\n",
-        "For each of the features, comment on the shape of the distribution. \n",
+        "For each of the features, comment on the shape of the distribution.\n",
         "\n",
         "Enter your answer in the text cell below:"
       ]
@@ -242,7 +245,7 @@
         "id": "N-Ysc1rLUEE5"
       },
       "source": [
-        "## Scatter Plot "
+        "## Scatter Plot"
       ]
     },
     {
